syntax = "proto3";

option go_package = "scannerV1";

option java_package = "io.stackrox.proto.api.scanner.v1";

import weak "google/api/annotations.proto";
import "shared/api/v1/vulnerability.proto";

package scannerV1;

message GetKubeVulnerabilitiesRequest {
    string kubernetes_version = 1;
}

message GetKubeVulnerabilitiesResponse {
    repeated Vulnerability aggregator_vulnerabilities         = 1;
    repeated Vulnerability apiserver_vulnerabilities          = 2;
    repeated Vulnerability controller_manager_vulnerabilities = 3;
    repeated Vulnerability scheduler_vulnerabilities          = 4;
}

// KubeScanService APIs can be used to get vulnerabilities for Kubernetes components.
service OrchestratorScanService {
    rpc GetKubeVulnerabilities(GetKubeVulnerabilitiesRequest) returns (GetKubeVulnerabilitiesResponse) {
        option (google.api.http) = {
            get: "/v1/kube/vulnerabilities"
        };
    }
}
