syntax = "proto3";

option go_package = "scannerV1";

option java_package = "io.stackrox.proto.api.scanner.v1";

import weak "google/api/annotations.proto";

package scannerV1;

message Image {
    repeated Feature features = 1;
}

message Feature {
    string                 name            = 1;
    string                 version         = 2;
    repeated Vulnerability vulnerabilities = 3;
    string                 feature_type    = 4;
    string                 added_by_layer  = 5;
    string                 location        = 6;
}

// Next tag: 7
message Vulnerability {
    string   name        = 1;
    string   description = 2;
    string   link        = 3;
    bytes    metadata    = 4 [deprecated=true];
    Metadata metadata_v2 = 6;
    string   fixed_by    = 5;
}

message Metadata {
    string       published_date_time     = 1;
    string       last_modified_date_time = 2;
    CVSSMetadata cvss_v2                 = 3;
    CVSSMetadata cvss_v3                 = 4;
}

message CVSSMetadata {
    string vector               = 1;
    float  score                = 2;
    float  exploitability_score = 3;
    float  impact_score         = 4;
}

message ScanImageRequest {
    string image = 1;
    message RegistryData {
        string url      = 1;
        string username = 2;
        string password = 3;
        bool   insecure = 4;
    }
    RegistryData registry = 2;
}

message ScanImageResponse {
    ScanStatus status = 1;
    ImageSpec image       = 2;
}

message ImageSpec {
    string digest = 1;
    string image  = 2;
}

message GetScanRequest {
    // Only one of the fields in ImageSpec needs to be set for the request to be properly formed
    // If both are set, then digest is used
    ImageSpec image_spec = 1;
}

message GetLanguageLevelComponentsRequest {
    // Only one of the fields in ImageSpec needs to be set for the request to be properly formed
    // If both are set, then digest is used
    ImageSpec image_spec = 1;
}

enum SourceType {
    UNSET_SOURCE_TYPE = 0;
    JAVA              = 1;
    PYTHON            = 2;
    NPM               = 3;
    GEM               = 4;
    DOTNETCORERUNTIME = 5;
}

message LanguageLevelComponent {
    SourceType source_type = 1;
    string     name        = 2;
    string     version     = 3;
    string     location    = 4;

    // TODO: consider adding more specific version information here (like all the stuff we have for Java).
}

message LanguageLevelComponents {
    repeated LanguageLevelComponent components = 1;
}

message GetLanguageLevelComponentsResponse {
    map <string, LanguageLevelComponents> layer_to_components = 1;
}

enum ScanStatus {
    UNSET     = 0;
    ANALYZING = 1;
    FAILED    = 2;
    SUCCEEDED = 3;
}

message GetScanResponse {
    ScanStatus status = 1;
    Image image       = 2;
}

message GetVulnerabilitiesRequest {
    repeated Component components = 1;
}

message Component {
    oneof component {
        ApplicationComponent app_component = 1;
        KubernetesComponent  k8s_component = 2;
    }
}

message ApplicationComponent {
    string vendor  = 1;
    string product = 2;
    string version = 3;
}

message KubernetesComponent {
    KubernetesComponent component = 1;
    string version                = 2;

    enum KubernetesComponent {
        UNSET                   = 0;
        CLIENT_GO               = 1;
        KUBE_AGGREGATOR         = 2;
        KUBE_APISERVER          = 3;
        KUBE_CONTROLLER_MANAGER = 4;
        KUBE_DNS                = 5;
        KUBE_PROXY              = 6;
        KUBE_SCHEDULER          = 7;
        KUBECTL                 = 8;
        KUBELET                 = 9;
    }
}

message GetVulnerabilitiesResponse {
    repeated ComponentWithVulns vulnerabilities_by_component = 1;
}

message ComponentWithVulns {
    Component              component       = 1;
    repeated Vulnerability vulnerabilities = 2;
}

// ScanService APIs can be used to scan images.
service ScanService {
    rpc ScanImage (ScanImageRequest) returns (ScanImageResponse) {
        option (google.api.http) = {
            post: "/v1/images/scan"
            body: "*"
        };
    }

    rpc GetScan(GetScanRequest) returns (GetScanResponse) {
        option (google.api.http) = {
            get: "/v1/images/scan"
        };
    }

    rpc GetLanguageLevelComponents(GetLanguageLevelComponentsRequest) returns (GetLanguageLevelComponentsResponse) {
        option (google.api.http) = {
            get: "/v1/images/languagecomponents"
        };
    }

    rpc GetVulnerabilities(GetVulnerabilitiesRequest) returns (GetVulnerabilitiesResponse) {
        option (google.api.http) = {
            get: "/v1/images/vulnerabilities"
        };
    }
}
